--- a/index.html
+++ b/index.html
@@ -52,6 +52,152 @@
 </header>
 
 
+<section class ="about">
+    <div class="about-center section-center">
+        <article class="about-info">
+            <div>
+                <h2>Welcome to Mayhem Barbell</h2>
+                <p class="about-text">
+                    insert text here
+                </p>
+                <a href="#" class="about-btn">Interested in Coaching?</a>
+            </div>
+        </article>
+
+        <article class="about-img">
+            <div class="about-img-container">
+                <img src="" alt="coaching" class="about-img"> 
+            </div>
+        </article>
+    </div>
+</section>
+
+<section id="workout">
+    <div class="work-title">
+        <h3 class="title">Why workout here </h3>
+    </div>
+
+    <div class="work-center">
+        <article class="service">
+            <i class="fas fa-bolt"></i>
+            <h3> Boost your fitness</h3>
+            <p> insert shit here </p>
+        </article>
+
+        <article class="service">
+            <i class="fas fa-leaf"></i>
+            <h3> mindful training </h3>
+            <p> insert shit here </p>
+        </article>
+
+        <article class="service">
+            <i class="fas fa-battery-three-quarters"></i>
+            <h3> core strenght </h3>
+            <p> insert shit here </p>
+        </article>
+
+        <article class="service">
+            <i class="fas fa-smiley"></i>
+            <h3> positivity </h3>
+            <p> insert shit here </p>
+        </article>
+    </div>
+
+</section>
+
+<section id="Testimonial">
+    <div class="work-title">
+        <h3 class="title"> Client Testimonials</h3> 
+    </div>
+
+    <div class="client-center">
+        <article class="testimonial">
+            <h3> Person 1</h3>
+            <img src="" alt="person1">
+            <p>testimonial here</p>
+        </article>
+
+        <article class="testimonial">
+            <h3> Person 2</h3>
+            <img src="" alt="person1">
+            <p>testimonial here</p>
+        </article>
+
+        <article class="testimonial">
+            <h3> Person 3</h3>
+            <img src="" alt="person1">
+            <p>testimonial here</p>
+        </article>
+
+        <article class="testimonial">
+            <h3> Person 4</h3>
+            <img src="" alt="person1">
+            <p>testimonial here</p>
+        </article>
+
+    </div>
+</section>
+
+<section id="gallery">
+    <div class="work-title">
+        <h3 class="title">Gallery</h3>
+    </div>
+    
+    <div class="gallery-container">
+        <article class="gallery-item">
+            <div class="img-container">
+                <img src="" alt="gallery1">
+            </div>
+            <div class="text-container">
+                <h4>Weights</h4>
+            </div>
+        </article>
+
+        <article class="gallery-item">
+            <div class="img-container">
+                <img src="" alt="gallery2">
+            </div>
+            <div class="text-container">
+                <h4>Weights</h4>
+            </div>
+        </article>
+
+        <article class="gallery-item">
+            <div class="img-container">
+                <img src="" alt="gallery3">
+            </div>
+            <div class="text-container">
+                <h4>Weights</h4>
+            </div>
+        </article>
+
+        
+    </div>
+</section>
+
+<section class="subscribe" id="subscribe">
+    <div>
+        <h3 class="title"> Subscribe to our mailing list</h3>
+    </div>
+
+    <form>
+        <div class="input-group">
+            <input type="email" class="form-control" placeholder="Email">
+            <button type="submit" class="btn-submit"> Submit</button>
+        </div>
+    </form>
+
+</section>
+
+<footer>
+    <div class="footer-text">
+        <h4> Copy Right &copy;2021. All rights reserved</h4>
+    </div>
+    <div class="terms">
+        <h4> Privacy & Terms &nbsp; Contact</h4>
+    </div>
+</footer>
+
 
 
 
