--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="main-title">
         <div class ="main-text font"> 
             <p> 24/7 ACCESS </p>
-            <h1>Mayhem Barbell</h1>
-            <p>BEST POWERLIFTING GYM IN MANILA</p>
+            <h1>Mayhem Barbell Club</h1>
+            <p>IN STRENGTH WE TRUST</p>
             <a href="#" class="grow main-btn"> Book A Session </a>
         </div>
     </div>
@@ -55,10 +55,12 @@
 <section class ="about">
     <div class="about-center section-center">
         <article class="about-info">
-            <div>
+            <div class="center">
                 <h2>Welcome to Mayhem Barbell</h2>
-                <p class="about-text">
-                    insert text here
+                <p class="about-text">   
+                    Mayhem Barbell is a 24/7 facility catered to powerlifters, bodybuilders, and anyone who is 
+                passionate in any form of strength sports. In Mayhem Barbell, there is always enough equipment for YOU.
+                The gym consists of multiple combo racks, power cages, rogue benches, calibrated and cast iron plates. 
                 </p>
                 <a href="#" class="about-btn">Interested in Coaching?</a>
             </div>
@@ -66,7 +68,7 @@
 
         <article class="about-img">
             <div class="about-img-container">
-                <img src="" alt="coaching" class="about-img"> 
+                <img src="images/powerlifting-coaching.jpg" alt="coaching" class="about-img"> 
             </div>
         </article>
     </div>
@@ -78,61 +80,63 @@
     </div>
 
     <div class="work-center">
-        <article class="service">
-            <i class="fas fa-bolt"></i>
-            <h3> Boost your fitness</h3>
-            <p> insert shit here </p>
+
+        <article class="service"> 
+            <h3> ATMOSPHERE </h3>
+            <p> In Mayhem, most of our athletes here compete on a national level 
+                and they have one goal and that is to be the best. The atmosphere in this gym will push you to your limits
+            and make you become a better version of yourself. </p>
         </article>
 
         <article class="service">
-            <i class="fas fa-leaf"></i>
-            <h3> mindful training </h3>
-            <p> insert shit here </p>
+            <h3> EQUIPMENT </h3>
+            <p> We have everything you need here at Mayhem, from standard gym equipment to competition grade equipment. 
+                 We have 11000 pounds worth of plates for everyone to enjoy and make
+                sure you'll never spend time in the gym waiting for equipment.
+            </p>
         </article>
 
         <article class="service">
-            <i class="fas fa-battery-three-quarters"></i>
-            <h3> core strenght </h3>
-            <p> insert shit here </p>
+            <h3> STRONG SUPPORT </h3>
+            <p> We get that most beginners get intimidated asking for help in the gym. 
+                Lucky for you, our staffs here at MAYHEM are also
+                national level athletes and are more than willing to help with the basics for FREE.
+                 We also offer in depth 1 on 1 and online coaching </p>
         </article>
 
-        <article class="service">
-            <i class="fas fa-smiley"></i>
-            <h3> positivity </h3>
-            <p> insert shit here </p>
-        </article>
+       
     </div>
 
 </section>
 
 <section id="Testimonial">
     <div class="work-title">
-        <h3 class="title"> Client Testimonials</h3> 
+        <h3 class="test-title">TESTIMONIALS</h3> 
     </div>
 
     <div class="client-center">
+
         <article class="testimonial">
-            <h3> Person 1</h3>
-            <img src="" alt="person1">
-            <p>testimonial here</p>
+            <img src="images/person 1.jpg" alt="powerlifter">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.</p>
+            <h3> George Williams</h3> 
+            <h4>Powerlifter</h4>   
         </article>
 
         <article class="testimonial">
-            <h3> Person 2</h3>
-            <img src="" alt="person1">
-            <p>testimonial here</p>
+            <img src="images/gym staff.jpg" alt="gym-staff">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.
+            </p>
+            <h3> Maegan Johnson</h3>
+            <h4>Gym Staff</h4>
         </article>
 
         <article class="testimonial">
-            <h3> Person 3</h3>
-            <img src="" alt="person1">
-            <p>testimonial here</p>
-        </article>
-
-        <article class="testimonial">
-            <h3> Person 4</h3>
-            <img src="" alt="person1">
-            <p>testimonial here</p>
+            <img src="images/bodybuilder.jpg" alt="bodybuilder">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+                 itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.</p>
+            <h3> Richard Lee</h3>
+            <h4>Physique Competitor</h4>
         </article>
 
     </div>
@@ -146,28 +150,28 @@
     <div class="gallery-container">
         <article class="gallery-item">
             <div class="img-container">
-                <img src="" alt="gallery1">
+                <img src="images/monolift.jpg" alt="monolift">
             </div>
             <div class="text-container">
-                <h4>Weights</h4>
+                <h4>Elitefts Monolift</h4>
             </div>
         </article>
 
         <article class="gallery-item">
             <div class="img-container">
-                <img src="" alt="gallery2">
+                <img src="images/ghost-combo-rack.jpeg" alt="ghost-combo-rack">
             </div>
             <div class="text-container">
-                <h4>Weights</h4>
+                <h4>Ghost Combo Rack HD</h4>
             </div>
         </article>
 
         <article class="gallery-item">
             <div class="img-container">
-                <img src="" alt="gallery3">
+                <img src="images/belt-squat.jpg" alt="pitshark">
             </div>
             <div class="text-container">
-                <h4>Weights</h4>
+                <h4>Belt Squat</h4>
             </div>
         </article>
 
@@ -182,8 +186,8 @@
 
     <form>
         <div class="input-group">
-            <input type="email" class="form-control" placeholder="Email">
-            <button type="submit" class="btn-submit"> Submit</button>
+            <input type="email" class="form-control" placeholder="email address">
+            <button type="submit" class="btn-submit"> Subscribe </button>
         </div>
     </form>
 
