--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <ul class="nav-links font">
             <li> <a href="#">Home </a></li>
-            <li> <a href="#">About Us </a></li>
-            <li> <a href="#">Gallery </a></li>
-            <li> <a href="#">Membership</a></li>
-            <li> <a href="#">Contact</a></li>
+            <li> <a href="#about">About Us </a></li>
+            <li> <a href="#gallery">Gallery </a></li>
+            <li> <a href="#membership">Membership</a></li>
+            <li> <a href="#contact">Contact</a></li>
             <li class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -45,7 +45,7 @@
             <p> 24/7 ACCESS </p>
             <h1>Mayhem Barbell Club</h1>
             <p>IN STRENGTH WE TRUST</p>
-            <a href="#" class="grow main-btn"> Book A Session </a>
+            <a href="#" class="grow main-btn"  id="about"> Book A FREE Session </a>
         </div>
     </div>
 
@@ -55,15 +55,13 @@
 <section class ="about">
     <div class="about-center section-center">
         <article class="about-info">
-            <div class="center">
                 <h2>Welcome to Mayhem Barbell</h2>
                 <p class="about-text">   
-                    Mayhem Barbell is a 24/7 facility catered to powerlifters, bodybuilders, and anyone who is 
-                passionate in any form of strength sports. In Mayhem Barbell, there is always enough equipment for YOU.
-                The gym consists of multiple combo racks, power cages, rogue benches, calibrated and cast iron plates. 
+                 Mayhem Barbell is a strength and conditoning training facility founded by two nationally accredited powerlifting coaches.
+                 It is a 24/7 operated gym located in Iowa that is catered to powerlifters, bodybuilders, and anyone who is interested in
+                 strength sports. Mayhem also offers both in person and online coaching for all levels.
                 </p>
                 <a href="#" class="about-btn">Interested in Coaching?</a>
-            </div>
         </article>
 
         <article class="about-img">
@@ -96,7 +94,7 @@
             </p>
         </article>
 
-        <article class="service">
+        <article class="service" id="support">
             <h3> STRONG SUPPORT </h3>
             <p> We get that most beginners get intimidated asking for help in the gym. 
                 Lucky for you, our staffs here at MAYHEM are also
@@ -118,14 +116,17 @@
 
         <article class="testimonial">
             <img src="images/person 1.jpg" alt="powerlifter">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.</p>
+            <p> Mayhem is the best powerlifting gym in Iowa. Every competition equipment you need is here. From combo racks to calibratedd
+                plates, these guys have it all!
+            </p>
             <h3> George Williams</h3> 
             <h4>Powerlifter</h4>   
         </article>
 
         <article class="testimonial">
             <img src="images/gym staff.jpg" alt="gym-staff">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.
+            <p> The members here at Mayhem are like my family. Everyone is so supportive, which is such a good work environment. I 
+                am proud to call this my second home.
             </p>
             <h3> Maegan Johnson</h3>
             <h4>Gym Staff</h4>
@@ -133,8 +134,10 @@
 
         <article class="testimonial">
             <img src="images/bodybuilder.jpg" alt="bodybuilder">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
-                 itaque. Quam, ex sunt! Voluptatem, dolorem expedita? Eligendi ratione numquam ab.</p>
+            <p>
+              This gym has all the machines you need for bodybuilding. The lighting is also really good, it helped me a lot for my 
+              posing practice for my first physique show.
+            </p>
             <h3> Richard Lee</h3>
             <h4>Physique Competitor</h4>
         </article>
@@ -175,7 +178,15 @@
             </div>
         </article>
 
-        
+        <article class="gallery-item">
+            <div class="img-container">
+                <img src="images/ghr-machine.jpg" alt="ghr-machine">
+            </div>
+            <div class="text-container">
+                <h4>Rogue GHD</h4>
+            </div>
+        </article>
+
     </div>
 </section>
 
