--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li> <a href="#about">About Us </a></li>
             <li> <a href="#gallery">Gallery </a></li>
             <li> <a href="#membership">Membership</a></li>
-            <li> <a href="#contact">Contact</a></li>
+            <li> <a href="#Testimonial">Testimony</a></li>
             <li class="social-media">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -73,16 +73,12 @@
 </section>
 
 <section id="workout">
-    <div class="work-title">
-        <h3 class="title">Why workout here </h3>
-    </div>
-
     <div class="work-center">
-
         <article class="service"> 
             <h3> ATMOSPHERE </h3>
-            <p> In Mayhem, most of our athletes here compete on a national level 
-                and they have one goal and that is to be the best. The atmosphere in this gym will push you to your limits
+            <p> In Mayhem Barbell, most of our athletes compete on a national level 
+                and these guys have one goal in mind, and that is to be the BEST of the BEST. 
+                The atmosphere in this gym will truly push you to your limits
             and make you become a better version of yourself. </p>
         </article>
 
@@ -95,11 +91,11 @@
         </article>
 
         <article class="service" id="support">
-            <h3> STRONG SUPPORT </h3>
+            <h3 >  STRONG SUPPORT </h3>
             <p> We get that most beginners get intimidated asking for help in the gym. 
                 Lucky for you, our staffs here at MAYHEM are also
                 national level athletes and are more than willing to help with the basics for FREE.
-                 We also offer in depth 1 on 1 and online coaching </p>
+                 We also offer in depth 1 on 1 and online coaching. </p>
         </article>
 
        
@@ -162,7 +158,7 @@
 
         <article class="gallery-item">
             <div class="img-container">
-                <img src="images/ghost-combo-rack.jpeg" alt="ghost-combo-rack">
+                <img src="images/ghost-combo-rack.png" alt="ghost-combo-rack">
             </div>
             <div class="text-container">
                 <h4>Ghost Combo Rack HD</h4>
@@ -171,7 +167,7 @@
 
         <article class="gallery-item">
             <div class="img-container">
-                <img src="images/belt-squat.jpg" alt="pitshark">
+                <img src="images/belt-squat.jpg" alt="belt-squat">
             </div>
             <div class="text-container">
                 <h4>Belt Squat</h4>
